fixed bug where cats may jump after strike

--- a/slash/css/stylesheet.css
+++ b/slash/css/stylesheet.css
@@ -70,3 +70,7 @@
 .striked {
   display: none;
 }
+
+.invisible {
+  opacity: 0;
+}
